location search from input that's outside the list view

--- a/_source/templates/primary.jade
+++ b/_source/templates/primary.jade
@@ -5,5 +5,5 @@ button Find My Location
 h3 OR
 
 fieldset
-  input(type="text")
-  input(type="submit", value="Go")
+  input#locations-search--input(type="text")
+  input#locations-search--submit(type="submit", value="Go")
