--- a/_source/css/styles.scss
+++ b/_source/css/styles.scss
@@ -10,5 +10,6 @@
 @import "base/layout";
 @import "base/nav";
 
+@import "locations/locations-primary";
 @import "locations/locations-map";
 @import "locations/locations-list";
