--- a/_source/index.jade
+++ b/_source/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
     link(rel="stylesheet", href="css/styles.css")
   body
     include templates/content.jade
-    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?libraries=places")
+    script(type="text/javascript", src="js/scripts.js")
+    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUT26ErTsXKP0kqOKurzs_0OMS6yL9hg&libraries=places&callback=initializeMap")
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js")
     script(type="text/javascript", src="libs/js-store-locator/dist/store-locator.min.js")
-    script(type="text/javascript", src="js/scripts.js")
