--- a/_source/templates/content.jade
+++ b/_source/templates/content.jade
@@ -1,8 +1,8 @@
 include nav
 
 section.main
-  section.primary
+  section#locations-primary.primary
     include primary
 
-  section.secondary
+  section#locations-secondary.secondary
     include secondary
