store grouping + correct function callbacks + real and test data

--- a/_source/index.jade
+++ b/_source/index.jade
@@ -2,11 +2,12 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    title Playground
+    title Store Locator
     link(rel="stylesheet", href="css/styles.css")
   body
     include templates/content.jade
     script(type="text/javascript", src="js/scripts.js")
-    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUT26ErTsXKP0kqOKurzs_0OMS6yL9hg&libraries=places&callback=initializeMap")
+    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUT26ErTsXKP0kqOKurzs_0OMS6yL9hg")
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js")
     script(type="text/javascript", src="libs/js-store-locator/dist/store-locator.min.js")
+    script(type="text/javascript", src="libs/js-marker-clusterer/src/markerclusterer.js")
