--- a/_source/templates/primary.jade
+++ b/_source/templates/primary.jade
@@ -4,6 +4,8 @@ button Find My Location
 
 h3 OR
 
-fieldset
-  input#locations-search--input(type="text")
-  input#locations-search--submit(type="submit", value="Go")
+.locationSearch
+
+//- fieldset
+//-   input#locations-search--input(type="text")
+//-   input#locations-search--submit(type="submit", value="Go")
