revised stylers and testing efficient JSON inclusion

--- a/_source/css/locations/locations-list.scss
+++ b/_source/css/locations/locations-list.scss
@@ -13,7 +13,8 @@
       border-left: 0 solid $red;
       transition: border 0.2s ease;
 
-      &:hover{
+      &:hover,
+      &.highlighted{
         cursor: pointer;
         border-left-width: 10px;
       }
