pug instead of jade + some styling + cleanup

--- a/_source/index.pug
+++ b/_source/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
     title Store Locator
     link(rel="stylesheet", href="css/styles.css")
   body
-    include templates/content.jade
+    include templates/content
     script(type="text/javascript", src="js/scripts.js")
     script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUT26ErTsXKP0kqOKurzs_0OMS6yL9hg")
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js")
