--- a/_source/css/locations/locations-list.scss
+++ b/_source/css/locations/locations-list.scss
@@ -11,12 +11,22 @@
       padding: $gutter;
       border-bottom: 1px solid #ccc;
       border-left: 0 solid $red;
-      transition: border 0.2s ease;
+      transition: border 0.2s ease, background-color 0.5s ease;
 
       &:hover,
       &.highlighted{
-        cursor: pointer;
         border-left-width: 10px;
+      }
+
+      &:hover{
+        cursor: pointer;
+      }
+
+      &.highlighted{
+        border-bottom-color: $red;
+        font-weight: bold;
+        color: white;
+        background-color: $red;
       }
     }
   }
